# OpenCode

./: .gitignore  Cargo.toml  README.md  design.md  implementation_plan.md  open-router-docs.md  task_tracker.md
src/: api_client.rs  app.rs  config.rs  context_manager.rs  interactive.rs  main.rs  streaming.rs  tools.rs  tui.rs
src/api/: api_client.rs  client.rs  models.rs
src/cli/: commands.rs
src/commands/: ask.rs  configure.rs  debug.rs  doc.rs  edit.rs  explain.rs  generate.rs  mod.rs  run.rs  shell.rs  test_cmd.rs
src/config/: mod.rs
src/context/: context_manager.rs  mod.rs
src/parsing/: mod.rs
src/tools/: code_intelligence.rs  command_execution.rs  execution.rs  mod.rs  registry.rs  tool_execution_engine.rs  tool_result_format.rs  web_search.rs
src/tui/: mod.rs
tests/: main_refactor.rs
